[package]
name = "bunnyfont"
version = "0.1.0"
authors = ["CodeBunny <slayer111315@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = { version = "0.1.8", optional = true }
ggez = { version = "0.6.0", optional = true }
structopt = { version = "0.3.23", optional = true }

[features]
utilities = ["ggez"]

[[bin]]
name = "indexer"
required-features = ["utilities", "failure", "structopt"]
