[package]
name = "bunnyfont"
version = "0.1.0"
authors = ["CodeBunny <slayer111315@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = { version = "0.1.8", optional = true }
ggez = { version = "0.6.0", optional = true }
glam = { version = "0.15.0", optional = true, features = ["mint"] }
structopt = { version = "0.3.23", optional = true }

[features]
ggez-integration = ["ggez", "glam"]
utilities = ["ggez-integration", "failure", "structopt"]

[[bin]]
name = "indexer"
required-features = ["utilities"]
